@@ -7,25 +7,9 @@
   <link rel="stylesheet" type="text/css" href="style/default.css">
   <link rel="stylesheet" type="text/css"
         href="http://www.w3.org/StyleSheets/TR/W3C-ED.css">
-  <style type="text/css">
-  .todo {
-      border-left: 0.5em solid #f44;
-      padding-left: 1em;
-      margin-top: 0.5em;
-      background: #FBE9E9;
-  }
-  
-  .todo:before {
-      content: "TO DO ";
-      color: #f44;
-  }
- </style>
 </head>
 
 <div id="div-head" class="head">
-<p><a href="http://www.w3.org/"><img id="mobile-logo" alt="W3C" height="53" src=
-"http://www.w3.org/2008/site/images/logo-w3c-mobile-lg" width="90"></a> 
-
 
 <!--begin-logo-->
 
@@ -454,10 +438,10 @@
     <a>'fePointLight'</a>, <a>'feSpotLight'</a>.
   </p>
 </dd>
-<dd id="TermFilterPrimitiveAttributes"><dfn>filter primitive attributes</dfn></dd>
-<dt>
+<dt id="TermFilterPrimitiveAttributes"><dfn>filter primitive attributes</dfn></dt>
+<dd>
   All <span>filter primitives</span> share 'x', 'y', 'width' and 'height' as filter primitive attributes.
-</dt>
+</dd>
 <dt id="TermVertexMesh"><dfn>vertex mesh</dfn></dt>
 <dd>
   The vertex mesh defines the geometry that is processed by the vertex shader.
@@ -537,11 +521,14 @@
 </p>
 
 <p>
+  Conceptually, any parts of the drawing are effected by filter operations. This includes any content, background, borders, text decoration, outline and visible scrolling mechanism of the element to which the filter is applied, and those of its descendants.
+</p>
+
+<p>
   The compositing model follows the <a
   href="http://www.w3.org/TR/SVG11/render.html#Introduction">SVG compositing
   model</a> [[!SVG11]]: first any filter effect is applied, then any clipping, masking
-  and opacity. These effects all apply after any other CSS effects such as
-  'border'. As per SVG, the application of 'filter' has no
+  and opacity. As per SVG, the application of 'filter' has no
   effect on hit-testing.
 </p>
 
