@@ -23,26 +23,9 @@
   <link href="style/default.css" rel=stylesheet type="text/css">
   <link href="http://www.w3.org/StyleSheets/TR/W3C-ED.css" rel=stylesheet
    type="text/css">
-  <style type="text/css">
-  .todo {
-      border-left: 0.5em solid #f44;
-      padding-left: 1em;
-      margin-top: 0.5em;
-      background: #FBE9E9;
-  }
-  
-  .todo:before {
-      content: "TO DO ";
-      color: #f44;
-  }
- </style>
 
  <body>
-  <div class=head id=div-head>
-   <p><a href="http://www.w3.org/"><img alt=W3C height=53 id=mobile-logo
-    src="http://www.w3.org/2008/site/images/logo-w3c-mobile-lg" width=90></a>
-    <!--begin-logo-->
-
+  <div class=head id=div-head> <!--begin-logo-->
    <p><a href="http://www.w3.org/"><img alt=W3C height=48
     src="http://www.w3.org/Icons/w3c_home" width=72></a> <!--end-logo-->
 
@@ -926,10 +909,10 @@
      href="#feSpotLightElement">‘<code
      class=property>feSpotLight</code>’</a>.
 
-   <dd id=TermFilterPrimitiveAttributes><dfn
+   <dt id=TermFilterPrimitiveAttributes><dfn
     id=filter-primitive-attributes>filter primitive attributes</dfn>
 
-   <dt> All <a href="#filter-primitives">filter primitives</a> share ‘<code
+   <dd> All <a href="#filter-primitives">filter primitives</a> share ‘<code
     class=property>x</code>’, ‘<code class=property>y</code>’, ‘<code
     class=property>width</code>’ and ‘<code
     class=property>height</code>’ as filter primitive attributes.
@@ -1012,14 +995,17 @@
    even though ‘<a href="#filter"><code class=property>filter</code></a>’
    can cause painting outside of an element's border box.
 
+  <p> Conceptually, any parts of the drawing are effected by filter
+   operations. This includes any content, background, borders, text
+   decoration, outline and visible scrolling mechanism of the element to
+   which the filter is applied, and those of its descendants.
+
   <p> The compositing model follows the <a
    href="http://www.w3.org/TR/SVG11/render.html#Introduction">SVG compositing
    model</a> <a href="#SVG11" rel=biblioentry>[SVG11]<!--{{!SVG11}}--></a>:
    first any filter effect is applied, then any clipping, masking and
-   opacity. These effects all apply after any other CSS effects such as
-   ‘<code class=property>border</code>’. As per SVG, the application of
-   ‘<a href="#filter"><code class=property>filter</code></a>’ has no
-   effect on hit-testing.
+   opacity. As per SVG, the application of ‘<a href="#filter"><code
+   class=property>filter</code></a>’ has no effect on hit-testing.
 
   <p class=issue> The CSS WG wants to look into how to apply the filter to
    certain parts of an object (background, border) instead of just the whole
