@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 2012-11-08  Dirk Schulze  <dschulze@adobe.com>
+- Calrify that filter operations effect all portions of element drawing, including scroll bars.
+
+2012-11-08  Dirk Schulze  <dschulze@adobe.com>
 - Add new sections for module interactions.
 
 2012-11-07  Dirk Schulze  <dschulze@adobe.com>
